fixing the paths of the img and height

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="main_container">
       <div class="right_container">
         <div class="profile_box">
-          <img src="/img/profile.png" alt="profile-picture" width="35%" />
+          <img src="img/profile.png" alt="profile-picture" width="35%" />
           <h4 class="name">YOUR NAME</h4>
           <p class="title">TITLE</p>
           <div class="linked_github_container">
